# StringArt

./: .gitignore  README.md  build.sh
.github/workflows/: build.yml
source/: CMakeLists.txt
source/random/: CMakeLists.txt
source/random/src/: sa_random.cpp
source/svg/: CMakeLists.txt
source/svg/src/: sa_svg.cpp
test/: rand_svg.sh
